# satelite-project

./: .gitignore  CMakeLists.txt  README.md
backend-server/: CMakeLists.txt  test.html
backend-server/src/: main.cpp
src/: main.cpp
telemetry-ui-front-end/: package-lock.json  package.json
telemetry-ui-front-end/src/: App.jsx  index.css  useTelemetry.jsx
